feat: Add App Creator UUID to the API Level
